durga@48demo.com.bleadtest/src/objects/TicketTypes__c.object
<CustomObject>
    <fields>
        <fullName>Avilable_for_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avilable for Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>TicketTypes</relationshipLabel>
        <relationshipName>TicketTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TT_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TT_Available__c</fullName>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TT_Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TT_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TT_Sold__c</fullName>
        <label>Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TT_TicketType__c</fullName>
        <label>TicketType</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TicketTypes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TT_{0000000}</displayFormat>
        <label>TT_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TicketTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>